--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "spell",
         "spelling",
         "grammar",
-        "mistakes"
+        "german"
     ],
 	"version": "0.0.4",
 	"repository": {
